# nas_mini

./: .gitignore  AGENTS.md  App.jsx  PROJECT_CONTEXT.md  README.md  app.json  docker-compose.yml  package-lock.json  package.json
.agents/commands/: add-feature.md  define-feature.md  define-project.md  implement-feature.md  init-project.md  plan-feature.md  setup-project.md
.devcontainer/: devcontainer.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: assets.py  deps.py
backend/app/core/: settings.py
backend/app/db/: connection.py  migrations.py
backend/app/db/migrations/: 001_initial.sql
backend/app/repositories/: assets.py  derived_files.py  jobs.py
backend/app/schemas/: assets.py
backend/app/services/: asset_read.py  ffmpeg.py  preview.py  preview_stream.py  storage.py  upload.py
backend/app/workers/: worker.py
backend/assets/lut/: rec709.cube
backend/tests/: test_asset_read_api.py  test_asset_read_service.py  test_asset_schemas.py  test_auth.py  test_db.py  test_ffmpeg_adapter.py  test_preview_confirmation_api.py  test_preview_repositories.py  test_preview_service.py  test_preview_stream.py  test_preview_streaming_api.py  test_settings.py  test_storage.py  test_upload_api.py  test_upload_repositories.py  test_upload_service.py  test_worker_jobs.py
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: 20260602-backend-foundation.md  20260622-backend-upload-api.md  20260624-backend-preview-worker.md  (+3 more)
(+24 files in other folders)
