[project]
name = "mediavault-backend"
version = "0.1.0"
description = "MediaVault FastAPI backend foundation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.124.0,<0.125.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<0.29.0",
    "pytest>=9.0.0,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
